welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:-7: error: not found: value averageValue
 val res = averageValue( t.getParameter(0).asInstanceOf[Array[Int]]);
           ^averageValue:2: error: not found: value somme
  somme=0
  ^averageValue:4: error: not found: value somme
    somme=somme+T(i)
    ^averageValue:6: error: not found: value somme
  return (somme/(T.length-1))
          ^