welcome.lessons.welcome.array.search.AverageValue.scala.code
def average(T:Array[Int]):Int = {
  somme=0
  for (i<- 0 to T.length-1){
    somme=somme+T(i)
  }
  return (somme/(T.length-1))
}
  
